--- a/src/Identity/Views/Home/CreateTaxiOrder.cshtml
+++ b/src/Identity/Views/Home/CreateTaxiOrder.cshtml
@@ -14,11 +14,11 @@
     </div>
     <div class="form-group">
         <label asp-for="Date" class="control-label">Дата</label>
-        <input type="text" asp-for="Date" class="form-control" />
+        <input type="date" asp-for="Date" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="Time" class="control-label">Время</label>
-        <input type="number" asp-for="Time" class="form-control" />
+        <input type="time" asp-for="Time" class="form-control" />
     </div>
     <div class="form-group">
         <label asp-for="PassengerName" class="control-label">Имя пасажира</label>
