--- a/src/Identity/Views/Shared/_Layout.cshtml
+++ b/src/Identity/Views/Shared/_Layout.cshtml
@@ -27,13 +27,14 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Identity</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Taxi Service</a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="About">About</a></li>
-                    <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="About">О нас</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="TaxiOrders">Поиск такси</a></li>
+                    <li><a asp-area="" asp-controller="Home" asp-action="TaxiOffers">Поиск клиента</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
