Added requests for changing roles of user

--- a/src/Identity/Views/Account/Login.cshtml
+++ b/src/Identity/Views/Account/Login.cshtml
@@ -1,7 +1,11 @@
 ﻿@using System.Collections.Generic
+@using System.Threading.Tasks
+@using Identity.Models
+@using Identity.Models.AccountViewModels
 @using Microsoft.AspNetCore.Http
 @using Microsoft.AspNetCore.Http.Authentication
-@model LoginViewModel
+using TaxiService.Models;n
+@model Identity.Models.AccountViewModels.LoginViewModel
 @inject SignInManager<ApplicationUser> SignInManager
 
 @{
