--- a/src/Identity/Views/Account/Register.cshtml
+++ b/src/Identity/Views/Account/Register.cshtml
@@ -1,4 +1,6 @@
-﻿@model RegisterViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.AccountViewModels
+@model Identity.Models.AccountViewModels.RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
