--- a/src/Identity/Views/Account/SendCode.cshtml
+++ b/src/Identity/Views/Account/SendCode.cshtml
@@ -1,4 +1,6 @@
-﻿@model SendCodeViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.AccountViewModels
+@model Identity.Models.AccountViewModels.SendCodeViewModel
 @{
     ViewData["Title"] = "Send Verification Code";
 }
