--- a/src/Identity/Views/Account/VerifyCode.cshtml
+++ b/src/Identity/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,6 @@
-﻿@model VerifyCodeViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.AccountViewModels
+@model Identity.Models.AccountViewModels.VerifyCodeViewModel
 @{
     ViewData["Title"] = "Verify";
 }
