--- a/src/Identity/Views/Manage/ManageLogins.cshtml
+++ b/src/Identity/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,6 @@
-﻿@model ManageLoginsViewModel
+﻿@model Identity.Models.ManageViewModels.ManageLoginsViewModel
+@using System.Threading.Tasks
+@using Identity.Models.ManageViewModels
 @using Microsoft.AspNetCore.Http.Authentication
 @{
     ViewData["Title"] = "Manage your external logins";
