--- a/src/Identity/Views/Manage/SetPassword.cshtml
+++ b/src/Identity/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,6 @@
-﻿@model SetPasswordViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.ManageViewModels
+@model Identity.Models.ManageViewModels.SetPasswordViewModel
 @{
     ViewData["Title"] = "Set Password";
 }
