--- a/src/Identity/Views/Roles/UserList.cshtml
+++ b/src/Identity/Views/Roles/UserList.cshtml
@@ -1,4 +1,5 @@
-﻿@model IEnumerable<Identity.Models.ApplicationUser>
+﻿@using Identity.Models
+@model IEnumerable<Identity.Models.ApplicationUser>
 
 <h2>Список пользователей</h2>
 <table class="table">
