--- a/src/Identity/Views/_ViewImports.cshtml
+++ b/src/Identity/Views/_ViewImports.cshtml
@@ -1,7 +1,3 @@
-﻿@using Identity
-@using Identity.Models
-@using Identity.Models.AccountViewModels
-@using Identity.Models.ManageViewModels
-@using Microsoft.AspNetCore.Identity
+﻿@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
