--- a/src/Identity/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/src/Identity/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,6 @@
-﻿@model ExternalLoginConfirmationViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.AccountViewModels
+@model Identity.Models.AccountViewModels.ExternalLoginConfirmationViewModel
 @{
     ViewData["Title"] = "Register";
 }
