--- a/src/Identity/Views/Account/ForgotPassword.cshtml
+++ b/src/Identity/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,6 @@
-﻿@model ForgotPasswordViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.AccountViewModels
+@model Identity.Models.AccountViewModels.ForgotPasswordViewModel
 @{
     ViewData["Title"] = "Forgot your password?";
 }
