--- a/src/Identity/Views/Account/ResetPassword.cshtml
+++ b/src/Identity/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,6 @@
-﻿@model ResetPasswordViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.AccountViewModels
+@model Identity.Models.AccountViewModels.ResetPasswordViewModel
 @{
     ViewData["Title"] = "Reset password";
 }
