--- a/src/Identity/Views/Manage/AddPhoneNumber.cshtml
+++ b/src/Identity/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,6 @@
-﻿@model AddPhoneNumberViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.ManageViewModels
+@model Identity.Models.ManageViewModels.AddPhoneNumberViewModel
 @{
     ViewData["Title"] = "Add Phone Number";
 }
