--- a/src/Identity/Views/Manage/ChangePassword.cshtml
+++ b/src/Identity/Views/Manage/ChangePassword.cshtml
@@ -1,4 +1,6 @@
-﻿@model ChangePasswordViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.ManageViewModels
+@model Identity.Models.ManageViewModels.ChangePasswordViewModel
 @{
     ViewData["Title"] = "Change Password";
 }
