--- a/src/Identity/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/src/Identity/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,6 @@
-﻿@model VerifyPhoneNumberViewModel
+﻿@using System.Threading.Tasks
+@using Identity.Models.ManageViewModels
+@model Identity.Models.ManageViewModels.VerifyPhoneNumberViewModel
 @{
     ViewData["Title"] = "Verify Phone Number";
 }
