--- a/src/Identity/Views/Shared/_LoginPartial.cshtml
+++ b/src/Identity/Views/Shared/_LoginPartial.cshtml
@@ -1,5 +1,6 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using System.Threading.Tasks
 @using Identity.Models
+@using Microsoft.AspNetCore.Identity
 
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
