--- a/src/Identity/Views/_ViewImports.cshtml
+++ b/src/Identity/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@addTagHelper *, jQWidgets.AspNetCore.Mvc.Bootstrap.TagHelpers
 @inject Microsoft.ApplicationInsights.Extensibility.TelemetryConfiguration TelemetryConfiguration
