--- a/src/Identity/Views/Shared/_Layout.cshtml
+++ b/src/Identity/Views/Shared/_Layout.cshtml
@@ -35,8 +35,8 @@
                 <ul class="nav navbar-nav">
                     <li><a asp-area="" asp-controller="Home" asp-action="Index">Главная</a></li>
                     <li><a asp-area="" asp-controller="Home" asp-action="About">О нас</a></li>
-                    <li><a asp-area="" asp-controller="Order" asp-action="TaxiOrders">Поиск такси</a></li>
-                    <li><a asp-area="" asp-controller="Offer" asp-action="TaxiOffers">Предложение такси</a></li>
+                    <li><a asp-area="" asp-controller="Order" asp-action="TaxiOrders">Список заказов</a></li>
+                    <li><a asp-area="" asp-controller="Offer" asp-action="TaxiOffers">Список предложений такси</a></li>
                 </ul>
                 @await Html.PartialAsync("_LoginPartial")
             </div>
