--- a/src/Identity/Views/Order/CreateTaxiOrder.cshtml
+++ b/src/Identity/Views/Order/CreateTaxiOrder.cshtml
@@ -83,7 +83,9 @@
     <dt>Грузовая</dt>
     @Html.CheckBoxFor(x => x.FreightCar)
 
-   
+    <div class="form-group">
+        <input type="submit" value="Создать" class="btn btn-default" />
+    </div>
 </form>
 
 @section scripts{
