--- a/src/Identity/Views/Order/DetailsTaxiOrder.cshtml
+++ b/src/Identity/Views/Order/DetailsTaxiOrder.cshtml
@@ -12,6 +12,8 @@
         <dt>Конечный пункт</dt>
         <dd>@Model.EndPoint</dd>
 
+        <dt>Дата</dt>
+        <dd>@Model.Date</dd>
 
         <dt>Время</dt>
         <dd>@Model.Time</dd>
