--- a/src/Identity/Views/Order/ConfirmTaxiOrder.cshtml
+++ b/src/Identity/Views/Order/ConfirmTaxiOrder.cshtml
@@ -7,17 +7,53 @@
 <h2>@ViewData["Title"]</h2>
 
 <form asp-action="ConfirmTaxiOrder" asp-controller="Order">
-    
+    <div class="validation" asp-validation-summary="ModelOnly"></div>
     <div class="form-group">
         <label asp-for="Duration" class="control-label">Длительность</label>
         <input type="time" asp-for="Duration" class="form-control" />
+
     </div>
     <div class="form-group">
         <label asp-for="Distanse" class="control-label">Расстояние</label>
         <input type="number" asp-for="Distanse" class="form-control" />
+        <span asp-validation-for="Distanse"></span>
     </div>
 
     <div class="form-group">
         <input type="submit" value="Подтвердить" class="btn btn-default" />
     </div>
 </form>
+
+@section scripts{
+
+    <environment names="Development">
+        <script src="~/lib/jquery-validation/dist/jquery.validate.js"></script>
+        <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.js"></script>
+    </environment>
+    <environment names="Staging,Production">
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validate/1.14.0/jquery.validate.min.js"
+                asp-fallback-src="~/lib/jquery-validation/dist/jquery.validate.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.validator">
+        </script>
+        <script src="https://ajax.aspnetcdn.com/ajax/jquery.validation.unobtrusive/3.2.6/jquery.validate.unobtrusive.min.js"
+                asp-fallback-src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"
+                asp-fallback-test="window.jQuery && window.jQuery.validator && window.jQuery.validator.unobtrusive">
+        </script>
+    </environment>
+    <script>
+        $(function () {
+            $('#btnLaunch').click(function () {
+                $('#myModal').modal('show');
+            });
+
+            $('#btnSave').click(function () {
+                var value = $('#txtInput').val();
+                $('#myModal').modal('hide');
+                setText(value, "expectedTime");
+            });
+        });
+        function setText(val, e) {
+            document.getElementById(e).value = val;
+        }
+    </script>
+}
