--- a/src/Identity/Views/Order/EditTaxiOrder.cshtml
+++ b/src/Identity/Views/Order/EditTaxiOrder.cshtml
@@ -6,15 +6,22 @@
 <h2>@ViewData["Title"]</h2>
 <form asp-action="EditTaxiOrder" asp-controller="Order" asp-route-id="@Model.Id">
     <div class="form-group">
-        <label asp-for="StartPoint" class="control-label">Начальная точка</label>
-        <input type="text" asp-for="StartPoint" class="form-control" />
-        <span asp-validation-for="StartPoint"></span>
+    <label asp-for="StartPoint" class="control-label">Начальная точка</label>
+    <input type="text" asp-for="StartPoint" class="form-control" />
+    <span asp-validation-for="StartPoint"></span>
     </div>
     <div class="form-group">
-        <label asp-for="EndPoint" class="control-label">Конечный пункт</label>
-        <input type="text" asp-for="EndPoint" class="form-control" />
-        <span asp-validation-for="EndPoint"></span>
+    <label asp-for="EndPoint" class="control-label">Конечный пункт</label>
+    <input type="text" asp-for="EndPoint" class="form-control" />
+    <span asp-validation-for="EndPoint"></span>
     </div>
+    
+    <div class="form-group">
+    <label asp-for="Date" class="control-label">Время</label>
+    <input type="date" asp-for="Date" class="form-control" />
+    <span asp-validation-for="Date"></span>
+    </div>
+    
     <div class="form-group">
         <label asp-for="Time" class="control-label">Время</label>
         <input type="time" asp-for="Time" class="form-control" />
@@ -25,7 +32,7 @@
         <input type="text" asp-for="PassengerName" class="form-control" />
         <span asp-validation-for="PassengerName"></span>
     </div>
-
+    
 
     <dt>С животными</dt>
     @Html.CheckBoxFor(m => m.WithAnimals)
