--- a/src/Identity/Views/Order/TaxiOrders.cshtml
+++ b/src/Identity/Views/Order/TaxiOrders.cshtml
@@ -6,18 +6,6 @@
 
 <h2>Все доступные заказы</h2>
 
-<bootstrap-modal id="myModal" aria-labelledby="myModalLabel" size="sm">
-    <bootstrap-modal-header>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
-        <h4 class="modal-title">Sample modal header</h4>
-    </bootstrap-modal-header>
-    <bootstrap-modal-body>
-        Sample modal body
-    </bootstrap-modal-body>
-</bootstrap-modal>
-
 <table class="table">
     
     <form asp-controller="Order" asp-action="TaxiOrders">
@@ -26,7 +14,10 @@
             <input class="btn btn-default" type="submit" value="Поиск" />
         </p>
     </form>
-
+     @if (this.User.IsInRole("taxi driver"))
+     {
+        <a asp-controller="Offer" asp-action="CreateTaxiOffer" class="btn btn-default btn">Cоздать предложение</a>
+     }
     <tr>
         <th>
             <a asp-action="TaxiOrders" asp-route-sortOrder="@ViewBag.StartPointSort">
@@ -57,23 +48,22 @@
             <td>
                 <div class="btn-group">
                     <a class="btn btn-default" data-toggle="tooltip" title="Подробнее" data-placement="top" asp-action="DetailsTaxiOrder" asp-controller="Order" asp-route-id="@item.Id"><span class="glyphicon glyphicon-info-sign"></span></a>
+                    @if (this.User.IsInRole("taxi driver"))
+                    {
+                        <a class="btn btn-default" data-toggle="tooltip" title="Принять" data-placement="top" asp-action="AgreeTaxiOrder" asp-controller="Order" asp-route-id="@item.Id"><span class="glyphicon glyphicon-ok"></span> </a>
+                    }
                     @if (this.User.IsInRole("admin"))
                     {
                         <a class="btn btn-default" data-toggle="tooltip" title="Изменить" data-placement="top" asp-action="EditTaxiOrder" asp-controller="Order" asp-route-id="@item.Id"><span class="glyphicon glyphicon-pencil"></span></a>
                         <a class="btn btn-default" data-toggle="tooltip" title="Удалить" data-placement="top" asp-action="DeleteTaxiOrder" asp-controller="Order" asp-route-id="@item.Id"><span class="glyphicon glyphicon-remove"></span> </a>
                         <a class="btn btn-default" asp-action="AgreeTaxiOrder" data-toggle="tooltip" title="Принять" data-placement="top" asp-controller="Order" asp-route-id="@item.Id"><span class="glyphicon glyphicon-ok"></span></a>
                     }
-                    else if (this.User.IsInRole("taxi driver"))
-                    {
-                        <a class="btn btn-default" data-toggle="tooltip" title="Принять" data-placement="top" asp-action="AgreeTaxiOrder" asp-controller="Order" asp-route-id="@item.Id"><span class="glyphicon glyphicon-ok"></span> </a>
-                    }
+                    
                 </div>
             </td>
         </tr>
     }
+    
+
 </table>
 
-@if (this.User.IsInRole("taxi driver")||this.User.IsInRole("admin"))
-{
-    <a asp-controller="Offer" asp-action="CreateTaxiOffer" class="btn btn-default btn">Cоздать предложение</a>
-}
